syntax = "proto3";
package cloudray.agent.o2a;
option ruby_package = "AgentPb::O2a";

enum ErrorType {
  ERROR_UNKNOWN = 0;

  ERROR_INTERNAL_SERVER = 1;
  ERROR_PROTOBUF_PARSE = 2;
  ERROR_MESSAGE_REQUIRES_AUTHENTICATION = 4;

  ERROR_AGENT_TOKEN_INVALID = 11;
  ERROR_AGENT_TOKEN_EXPIRED = 12;

  ERROR_REG_CODE_INVALID = 21;
}

message Error {
  ErrorType error_type = 1;
  string error_description = 2;
}

message AuthResult {
  string agent_token = 1;
  string machine_url = 2;
}

message RunlogRun {
  uint64 runlog_id = 1;
  string parsed_script = 2;
}

message O2aMessage {
  // why not just "payload"? Since generated code creates an enum with this name, "O2aPayload" is more readable than
  // "Payload" to easily understand the context of code.
  oneof o2a_payload {
    Error error = 100;

    AuthResult auth_result = 101;

    RunlogRun runlog_run = 201;
  }
}

message O2aRoot {
  repeated O2aMessage messages = 11;
}
